--- a/src/classes/SalesOrderLineItemMangerBatch.cls
+++ b/src/classes/SalesOrderLineItemMangerBatch.cls
@@ -1,16 +1,16 @@
-global class SalesOrderLineItemMangerBatch implements Database.Batchable<sObject> {
+global class Fon_SalesOrderLineItemMangerBatch implements Database.Batchable<sObject> {
     private final String strConveniencefee = 'Convenience fee';
     /**
         @Author: RSystem
         @Description: To process the soli records where creation date on SOLI is today.
     */
-    global Database.QueryLocator start(Database.BatchableContext BC) {
+    global Database.QueryLocator start(Database.BatchableContext BC) { 
         // Collect the batches of records
-        Date today = System.today();
         return Database.getQueryLocator('SELECT Id,Name,OrderApi__Item__c,OrderApi__Item__r.Is_Foundation_Donation__c,OrderApi__List_Price__c,OrderApi__Price_Override__c,'+
                                             'OrderApi__Is_Renewal__c,OrderApi__Subscription__c,OrderApi__Subscription__r.OrderApi__Subscription_Plan__c,'+
                                                 'OrderApi__Subscription__r.OrderApi__Subscription_Plan__r.OrderApi__Enable_Schedule__c,CreatedDate,'+
-                                                'OrderApi__Sales_Order__c FROM OrderApi__Sales_Order_Line__c WHERE CreatedDate =: today');
+                                                    'OrderApi__Account__c,OrderApi__Contact__c,OrderApi__Business_Group__c,OrderApi__Price_Rule__c,'+
+                                                        'OrderApi__Sale_Price__c,OrderApi__Sales_Order__c FROM OrderApi__Sales_Order_Line__c WHERE CreatedDate = TODAY');
     }
     global void execute(Database.BatchableContext BC, List<OrderApi__Sales_Order_Line__c> lstSOLI) {
         OrderApi__Item__c objConvenienceFeeItem = fetchConvenienceFeeItem();
@@ -22,8 +22,8 @@ global class SalesOrderLineItemMangerBatch implements Database.Batchable<sObject
         Set<Id> setConvenienceSalesOrderId = fetchConvenienceFeeSalesOrder(setSalesOrderId);
         setSalesOrderId = new Set<Id>();
         for(OrderApi__Sales_Order_Line__c eachSOLI : lstSOLI){
-            if(eachSOLI.OrderApi__Is_Renewal__c && String.isEmpty(eachSOLI.OrderApi__Subscription__c) && 
-                String.isEmpty(eachSOLI.OrderApi__Subscription__r.OrderApi__Subscription_Plan__c) && 
+            if(eachSOLI.OrderApi__Is_Renewal__c && !String.isEmpty(eachSOLI.OrderApi__Subscription__c) && 
+                !String.isEmpty(eachSOLI.OrderApi__Subscription__r.OrderApi__Subscription_Plan__c) && 
                     eachSOLI.OrderApi__Subscription__r.OrderApi__Subscription_Plan__r.OrderApi__Enable_Schedule__c && objConvenienceFeeItem != null && 
                         !setConvenienceSalesOrderId.contains(eachSOLI.OrderApi__Sales_Order__c)){
                 OrderApi__Sales_Order_Line__c InstanceSOLI = fetchSOLIInstance(eachSOLI);
@@ -34,6 +34,7 @@ global class SalesOrderLineItemMangerBatch implements Database.Batchable<sObject
             if(eachSOLI.OrderApi__Item__r.Is_Foundation_Donation__c){
                 OrderApi__Sales_Order_Line__c InstanceSOLI = fetchSOLIInstance(eachSOLI);
                 InstanceSOLI.OrderApi__Price_Override__c = true;
+                InstanceSOLI.OrderApi__Sale_Price__c = eachSOLI.OrderApi__Sale_Price__c;
                 lstNewSOLI.add(InstanceSOLI);
                 setSalesOrderId.add(eachSOLI.OrderApi__Sales_Order__c);
             }
@@ -60,7 +61,8 @@ global class SalesOrderLineItemMangerBatch implements Database.Batchable<sObject
     */
     public OrderApi__Sales_Order_Line__c fetchSOLIInstance(OrderApi__Sales_Order_Line__c objOldSOLI){
         OrderApi__Sales_Order_Line__c objSOLI = new OrderApi__Sales_Order_Line__c(OrderApi__Sales_Order__c = objOldSOLI.OrderApi__Sales_Order__c,OrderApi__Item__c = objOldSOLI.OrderApi__Item__c,
-            OrderApi__Account__c = objOldSOLI.OrderApi__Account__c,OrderApi__Contact__c = objOldSOLI.OrderApi__Contact__c,OrderApi__Business_Group__c = objOldSOLI.OrderApi__Business_Group__c);
+            OrderApi__Account__c = objOldSOLI.OrderApi__Account__c,OrderApi__Contact__c = objOldSOLI.OrderApi__Contact__c,OrderApi__Business_Group__c = objOldSOLI.OrderApi__Business_Group__c,
+            OrderApi__Price_Rule__c = objOldSOLI.OrderApi__Price_Rule__c);
         return objSOLI;
     }
     /**
@@ -81,7 +83,7 @@ global class SalesOrderLineItemMangerBatch implements Database.Batchable<sObject
     */
     public Set<Id> fetchConvenienceFeeSalesOrder(Set<Id> setSalesOrderId){
         Set<Id> setConvenienceSalesOrderId = new Set<Id>();
-        for(OrderApi__Sales_Order__c objSO : [SELECT Id,(SELECT Id FROM OrderApi__Sales_Order_Lines__r WHERE Name =: strConveniencefee) 
+        for(OrderApi__Sales_Order__c objSO : [SELECT Id,(SELECT Id FROM OrderApi__Sales_Order_Lines__r WHERE OrderApi__Item__r.Name =: strConveniencefee) 
                                                 FROM OrderApi__Sales_Order__c WHERE Id IN :setSalesOrderId]){
             if(objSO.OrderApi__Sales_Order_Lines__r != null && !objSO.OrderApi__Sales_Order_Lines__r.isEmpty()){
                 setConvenienceSalesOrderId.add(objSO.Id);
